# phase_manager

./: CMakeLists.txt  README.md  package.xml
bindings/python/: CMakeLists.txt  __init__.py  pyPhase.cpp  pyPhaseManager.cpp  pyRosServer.cpp  pyTimeline.cpp
include/phase_manager/: class_resolver.h  horizon_interface.h  horizon_manager.h  phase.h  phase_manager.h  ros_server_class.h  timeline.h
msg/: Timeline.msg  TimelineArray.msg
python/: gui.py  ros_client_class.py  timelines_widget.py
src/: horizon_manager.cpp  letstry.cpp  phase.cpp  phase_manager.cpp  ros_server_class.cpp  timeline.cpp
tests/: CMakeLists.txt  add_phases.py  horizon_add_elements.py  horizon_scope.py  horizon_scope_test.py  insert_phase.py  letstry.cpp  negative_initial_pos.py  python_test.py  receding_test.py  set_item_reference.py  set_item_reference_token.py  set_nodes_absolute.py  set_nodes_test.py
