<?xml version="1.0"?>
<package format="2">
  <name>phase_manager</name>
  <version>0.0.0</version>
  <description>Phase manager package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="francesco.ruscelli@iit.it">Francesco Ruscelli</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
<!--  <run_depend>message_runtime</run_depend>-->
  <!-- <build_depend>rospy</build_depend> -->
  <!-- <exec_depend>rospy</exec_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
<!--  <export>-->
    <!-- Other tools can request additional information be placed here -->

<!--  </export>-->
</package>

